<resources>
    <string name="app_name">module_aliyun</string>
    <string name="alivc_player_settings_title">Player Settings</string>
    <string name="alivc_error_msg">Error message</string>
    <string name="alivc_error_code">Error code:</string>
    <string name="alivc_retry">Retry</string>


    <string name="alivc_net_disable">The network is unreachable, please check network and replay latter</string>
    <string name="alivc_net_state_mobile">The current network is cell-network, whether to continue?</string>
    <string name="alivc_net_state_mobile_yes">Resume</string>
    <string name="alivc_net_state_mobile_no">Exit</string>
    <string name="alivc_alivc_replay_msg">播放完毕</string>
    <string name="alivc_replay">重播</string>
    <string name="alivc_loading">Loading...</string>
    <string name="alivc_loading_tips">Video is loading...</string>


    <string name="alivc_speed_one_times">Normal</string>
    <string name="alivc_speed_optf_times">1.25X</string>
    <string name="alivc_speed_opt_times">1.5X</string>
    <string name="alivc_speed_twice_times">2.0X</string>
    <string name="alivc_speed_mode">Fast Speed Play</string>
    <string name="alivc_speed_tips">the current video has switched to %1$s speed rate</string>
    <string name="alivc_left_side">left side</string>
    <string name="alivc_brightness">brightness</string>
    <string name="alivc_control">&#160;control</string>
    <string name="alivc_center">center</string>
    <string name="alivc_progress">progress</string>
    <string name="alivc_right_side">right side</string>
    <string name="alivc_volume">volume</string>

    <string name="input_vid_here">Please input vid here</string>
    <string name="inout_accesskeyid_here">input accesskeyId here </string>
    <string name="input_accesskeysecret_here">input accesskeySecret here</string>
    <string name="input_securitytoken_here">input securityToken here </string>
    <string name="input_url_here">input url here </string>
    <string name="start_player_ui">Open UI of player</string>
    <string name="start_player_setting">Setting</string>
    <string name="request_vidsts_fail">Request a vidAuth failed</string>
    <string name="play_url_null_toast">Play video URL cannot be null</string>
    <string name="clear_logs">clear logs</string>

    <string name="player_log">Player Logs：</string>
    <string name="log_start_get_data">&#160;start to get a streaming</string>
    <string name="log_strart_play">&#160;start to play</string>
    <string name="log_prepare_success"> &#160;prepared successfully</string>
    <string name="toast_prepare_success">Prepared successfully</string>
    <string name="log_play_completion">&#160;video ended</string>
    <string name="toast_play_compleion">video ended</string>
    <string name="log_player_create_success"> &#160;create a player successfully</string>
    <string name="log_open_url_success"> &#160;open an url successfully</string>
    <string name="log_request_stream_success"> &#160;get a streaming successfully</string>
    <string name="log_start_open_stream"> &#160;start to open a streaming</string>
    <string name="log_first_frame_played"> &#160;the first frame showed</string>
    <string name="log_seek_completed">&#160;seek operation completed</string>
    <string name="log_play_stopped">&#160;play operation stopped</string>
    <string name="log_seek_start">&#160;seek operation started</string>
    <string name="log_change_quality_success">&#160;Video quality switched successfully</string>
    <string name="log_change_quality_fail">&#160;Video quality switched unsuccessfully</string>

    <string name="alivc_checkbox_all_select">Select All</string>
    <string name="alivc_download_delete">Delete</string>
    <string name="alivc_download_edit">Edit</string>

    <string name="prepare_download_item">To prepare download-item</string>
    <string name="add_to_download">添加下载</string>
    <string name="no_download_right">No permission for downloading</string>
    <string name="encrypted">Encrypted</string>
    <string name="encrypted_no">Unencrypted</string>
    <string name="choose_a_definition_to_download">Please choose a definition to download</string>
    <string name="choose_downloaditem">Choose download item</string>
    <string name="choose_download_sharpness">选择下载清晰度</string>
    <string name="already_downloaded">Already Downloaded</string>
    <string name="download_caching">Caching</string>
    <string name="download_prepare">准备</string>
    <string name="download_wait">等待</string>
    <string name="download_downloading">下载中</string>
    <string name="download_pause">暂停</string>
    <string name="download_error">错误</string>
    <string name="download_no_downloaded">您还没有下载该视频</string>
    <string name="download_no_downloaded_tips">You can click the download button to add video</string>
    <string name="alivc_delete_confirm">Do you want to delete the selected video?</string>
    <string name="alivc_start_download">start download</string>
    <string name="alivc_native_video">native video</string>

    <string name="alivc_check_list_close">关闭</string>
    <string name="kickbt">确定</string>
    <string name="kickalert">你被主播移出直播间，请注意言行！</string>

    <string name="alivc_download_video">download video</string>

    <string name="alivc_dialog_sure">确定</string>
    <string name="alivc_dialog_cancle">取消</string>
    <string name="slivc_not_support_url">不支持URL下载...</string>

    <string name="alivc_speed">speed</string>

    <string name="operate_success">操作成功</string>
    <string name="operate_fail">操作失败</string>
    <string name="loading">正在加载</string>
    <string name="alivc_video_download_finish_tips">该视频下载完成</string>
    <string name="alivc_video_downloading_tips">该视频正在下载</string>
    <string name="kf5_loading">加载中</string>

    <string-array name="spinner">
        <item>小学</item>
        <item>初中</item>

    </string-array>

    <string-array name="home_tab">
        <item>首页</item>
        <item>课程</item>
        <item>学习</item>
        <item>我的</item>
    </string-array>

    <!--未被选中的底部资源ID-->
    <integer-array name="unselected_ids">
        <item>@drawable/first_page_un</item>
        <item>@drawable/tab_course_un</item>
        <item>@drawable/tab_study_un</item>
        <item>@drawable/tab_mine_un</item>
    </integer-array>
    <!--选中的底部资源ID-->
    <integer-array name="selected_ids">
        <item>@drawable/first_page</item>
        <item>@drawable/tab_course</item>
        <item>@drawable/tab_study</item>
        <item>@drawable/tab_mine</item>
    </integer-array>
    <string name="alivc_player_get_sts_failed">No STS token is available</string>
    <string name="alivc_player_get_auth_failed">No Auth token is available</string>
    <string name="alivc_player_delete_failed">The path does not exist</string>
    <string name="alivc_player_redownload">The resource does not exist or it is not downloaded</string>
    <!--quality-->
    <string name="alivc_fd_definition">LD</string>
    <string name="alivc_ld_definition">SD</string>
    <string name="alivc_sd_definition">HD</string>
    <string name="alivc_hd_definition">Ultra HD</string>
    <string name="alivc_k2_definition">2K (2560 * 1440)</string>
    <string name="alivc_k4_definition">4K (3840 * 2160)</string>
    <string name="alivc_od_definition">Original</string>
    <string name="alivc_sq_definition">SQ</string>
    <string name="alivc_hq_definition">HQ</string>

    <!--mts-->
    <!--<string name="alivc_mts_xld_definition">极速</string>-->
    <string name="alivc_mts_ld_definition">LD</string>
    <string name="alivc_mts_sd_definition">SD</string>
    <string name="alivc_mts_fhd_definition">Ultra HD</string>
    <string name="alivc_mts_hd_definition">HD</string>
    <string name="alivc_mts_xld_definition">Highest</string>
    <string name="course">课程</string>
    <string name="most_popular_course">最受欢迎课程</string>
    <string name="more">更多</string>
    <string name="change_some">换一批</string>
    <string name="cancel">取消</string>
    <string name="search_tip">没有找到搜索内容哦~</string>
    <string name="search_null">请输入要搜索的课程</string>
    <string name="search_history">搜索历史</string>
    <string name="clear">清空</string>
    <string name="classify">分类</string>
    <string name="set_current">设置当前学段</string>
    <string name="xiaoxue">小学</string>
    <string name="chuzhong">初中</string>

    <!--播放速度类型-->
    <string name="speed_value_1">0.75x</string>
    <string name="speed_value_2">1x</string>
    <string name="speed_value_3">1.25x</string>
    <string name="speed_value_4">1.5x</string>
    <string name="speed_value_5">1.75x</string>

    <string name="play_speed">播放速度</string>
    <string name="study_status_open">练习模式已经打开</string>
    <string name="study_status_close">练习模式已经关闭</string>

    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="is_confirm_delete_note">确认删除该笔记?</string>
    <string name="confirm">确认</string>


    <string name="answer_error">回答错误</string>
    <string name="answer_error_tips">抱歉，您回答错误，请重新答题。</string>

    <string name="answer_correct">回答正确</string>
    <string name="answer_correct_tips">恭喜你，又掌握了一道题目！</string>
</resources>
