<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog_white_corner"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_answer_true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/is_confirm_delete_note"
        android:textColor="@color/black303133"
        android:textSize="@dimen/sp_9" />

    <TextView
        android:id="@+id/tv_btn_yes"
        android:layout_width="@dimen/dp_125"
        android:layout_height="@dimen/dp_25"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_17"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/shape_yellow_radius_5"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/black303133"
        android:textSize="@dimen/sp_9" />

    <TextView
        android:id="@+id/tv_btn_no"
        android:layout_width="@dimen/dp_125"
        android:layout_height="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@drawable/shape_gray_radius_5"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/gray909399"
        android:textSize="@dimen/sp_9" />
</LinearLayout>